# icfpc2022

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  chokudai_allsubmit.sh  chokudai_alltest.sh  chokudai_test4.sh  div10.txt  div22.txt  div23.txt  div5.txt  div6.txt  div7.txt  out10.txt  out11.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt  out7.txt  out8.txt
configs/: login.json.encrypted  service_account.json.encrypted
docker/: Makefile  builder.Dockerfile  phpmyadmin.Dockerfile  runner.Dockerfile  server.Dockerfile  tools.Dockerfile
go/: Makefile  go.mod  go.sum
problems/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.initial.json  26.json  27.initial.json  27.json  28.initial.json  28.json  29.initial.json  29.json  3.json  30.initial.json  30.json  31.initial.json  31.json  32.initial.json  32.json  33.initial.json  33.json  34.initial.json  34.json  35.initial.json  35.json  36.initial.json  (+15 more)
scripts/: check_unagi_password.sh  copy_binaries.sh  deploy_binaries.sh  exec.sh  scoreboard_diffs.py  submit_final.py  submit_local_optimization.py  submit_local_optimization_internal.py
src/: canvas.rs  chokudai1.rs  chokudai_dev2.rs  color.rs  initial_json.rs  lib.rs  local_optimization.rs  optmerge.rs  rotate.rs  submissions.rs  wasm.rs  wata.rs
static/: jquery-linedtextarea.css  jquery-linedtextarea.js  style.css
submissions/: 10027.isl  10027.json  10145.isl  10145.json  10268.isl  10268.json  10270.isl  10270.json  10584.isl  10584.json  10592.isl  10592.json  10691.isl  10691.json  11020.json  11139.json  11141.isl  11141.json  11142.isl  11142.json  11143.isl  11143.json  11145.isl  11145.json  11147.json  11148.json  (+1311 more)
web/: .gitignore  Cargo.toml  Makefile  build.sh  index.html
web/src/: lib.rs
(+39 files in other folders)
