[package]
name = "icfpc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
once_cell = "1.13.1"
rand = "0.8.5"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.0"
png = "0.17.5"

[profile.release]
debug = true
