[package]
name = "icfpc2022"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "*", features = ["js"] }
indicatif = "0.17.0"
itertools = "0.10.3"
once_cell = "1.13.1"
png = "0.17.5"
rand = "0.8.5"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "*", optional = true }
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
wee_alloc = { version = "*", optional = true }
web-sys = { version = "*", features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageData",
  "Window",
  "console",
] }

[profile.release]
debug = true

[profile.release.'cfg(target_arch = "wasm32")']
lto = true
