[package]
name = "web"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
js-sys = "0.3.56"
svg = "0.10.0"
png = "0.17.5"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icfpc2022 = { path = "../" }
web-sys = {"version" = "0.3.44", features=['console']}
console_error_panic_hook = "0.1.7"